--- a/index.html
+++ b/index.html
@@ -823,272 +823,262 @@ window.openSnake = ()=>{ closeOverlay('playOverlay'); openOverlay('snakeModal');
 })();
 
 /* ===== Vortex Hex (working collider) ===== */
-/* ===== Vortex Hex — inward waves, crisp scaling, solid Quit ===== */
+/* ===== Vortex Hex (easy, restartable, correct sizes) ===== */
 (function(){
-  // Elements
   const cvs = document.getElementById('vortexCanvas');
-  const startBtn = document.getElementById('vortexStart');
-  const pauseBtn = document.getElementById('vortexPause');
-  const quitBtn  = document.getElementById('vortexQuit');
-  const scoreEl  = document.getElementById('vortexScore');
-  const earnEl   = document.getElementById('vortexEarned');
-  if(!cvs || !startBtn || !pauseBtn || !quitBtn || !scoreEl || !earnEl) return;
-
   const ctx = cvs.getContext('2d');
+  if (!cvs || !ctx) return;
 
-  // HiDPI: draw in CSS pixels, back buffer in device pixels
+  // ---------- world + scale ----------
+  let W=0, H=0, dpr=1, cx=0, cy=0, R=0;      // canvas, center, world radius
+  let unit=1;                                 // scale helper (H/800)
   function fitCanvas(){
-    const r = cvs.getBoundingClientRect();
-    const dpr = Math.max(1, window.devicePixelRatio || 1);
-    cvs.width  = Math.round(r.width  * dpr);
-    cvs.height = Math.round(r.height * dpr);
-    ctx.setTransform(dpr,0,0,dpr,0,0); // draw using CSS pixels
+    const rect = cvs.getBoundingClientRect();
+    dpr = window.devicePixelRatio || 1;
+    W = Math.max(1, Math.floor(rect.width * dpr));
+    H = Math.max(1, Math.floor(rect.height * dpr));
+    cvs.width = W; cvs.height = H;
+    cx = W/2; cy = H/2;
+    R = Math.min(W, H) * 0.42;               // playfield radius
+    unit = (H / dpr) / 800;                   // consistent feel across devices
   }
 
-  // World
-  const TAU = Math.PI*2;
-  let W=0,H=0,cx=0,cy=0,unit=1;
+  // ---------- game state ----------
   let running=false, paused=false, raf=null, lastTs=0;
-
+  let score=0, earned=0;
+  let arcs=[], spawnT=0, spawnEvery=1.85;    // easy: slower spawns
   const player = {
-    r: 0,            // orbit radius
-    theta: 0,        // angle
-    speed: 3.4,      // rad/s (increase for faster turns)
-    vtheta: 0,
-    tip: 10,         // triangle size
+    ang: 0,
+    rotSpeed: 3.0,                           // radians/sec
+    rad: 0.28,                               // normalized radius from center
+    size: 0.18                               // triangle size (normalized) -> BIG (3×)
   };
+  const input = { left:false, right:false };
 
-  // incoming wedges (walls)
-  // { r, thick, a, span, w, dir, vr }
-  let walls = [];
-  let spawnCd = 0;
-
-  let score=0, chads=0, t=0;
-
-  // Angle helpers (robust across 0/360)
-  function norm(a){ return (a%TAU + TAU) % TAU; }
-  function angDelta(a,b){ let d=a-b; d=(d+Math.PI)%TAU; if(d<0)d+=TAU; return d-Math.PI; }
-
-  // Collision check using smallest signed angle difference
-  const PAD=2; // extra forgiveness
-  function hitWall(w){
-    const radial = Math.abs(player.r - w.r) <= (w.thick*0.5 + PAD);
-    if(!radial) return false;
-    const d = Math.abs(angDelta(norm(player.theta), norm(w.a)));
-    return d <= (w.span*0.5);
+  // ---------- helpers ----------
+  function wrapPI(a){ a%=Math.PI*2; return (a<0)?a+Math.PI*2:a; }
+  function angDiff(a,b){
+    let d = Math.abs(wrapPI(a) - wrapPI(b));
+    return Math.min(d, Math.PI*2 - d);
   }
 
-  // Spawn one ring of wedges at outer radius
-  function spawnWave(){
-    const baseR = Math.min(W,H)*0.55; // start off-screen
-    const laneR = Math.min(W,H)*0.34; // player lane (target radius)
-    const num   = 5 + Math.floor(Math.random()*2); // 5 or 6 wedges
-    const open  = (Math.PI/5) * (0.9 + Math.random()*0.5); // one missing gap
-    const gapAt = Math.random()*TAU;
+  // generate a new arc (ring segment)
+  function spawnArc(){
+    // easy: outer radius, thin, modest length, slow rotation/inward speed
+    const radN = 0.62 + Math.random()*0.30;              // [0.62..0.92]
+    const thickN = (0.010 + Math.random()*0.012);        // **half** thickness (~2× narrower)
+    const len = 0.35 + Math.random()*0.40;               // angular span (radians) shorter = easier
+    const a0  = Math.random()*Math.PI*2;                 // start angle
+    const angVel = (Math.random()<0.5?-1:1) * (0.30 + Math.random()*0.30); // slow spin
+    const vr = -(80 + Math.random()*70) * unit / R;      // inward per second in normalized units
 
-    const thick = 22*unit;
-    for(let i=0;i<num;i++){
-      // make a ring but leave a gap "open"
-      const a = (i * (TAU/num));
-      const span = (TAU/num) * (0.72 + Math.random()*0.1);
-      if (Math.abs(angDelta(a, gapAt)) < open*0.5) continue;
-
-      walls.push({
-        r: baseR + Math.random()*30*unit,
-        thick,
-        a: a + Math.random()*0.2,
-        span,
-        w: 0.6 + Math.random()*0.9,           // angular speed
-        dir: Math.random()<0.5 ? -1 : 1,
-        vr: - (140*unit + Math.random()*120*unit) // inward radial speed
-      });
-    }
-
-    // bonus tiny arc that rotates fast (spice)
-    if (Math.random()<0.45){
-      walls.push({
-        r: baseR + 10*unit,
-        thick: 14*unit,
-        a: Math.random()*TAU,
-        span: Math.PI/8,
-        w: 2.0,
-        dir: Math.random()<0.5?-1:1,
-        vr: - (200*unit + Math.random()*160*unit)
-      });
-    }
+    arcs.push({radN, thickN, len, a0, angVel, vr});
   }
 
-  // Reset world to a known state
   function reset(){
-    fitCanvas();
-    W = cvs.width/(window.devicePixelRatio||1);
-    H = cvs.height/(window.devicePixelRatio||1);
-    cx=W/2; cy=H/2; unit = H/800;
-
-    player.r = Math.min(W,H)*0.34;
-    player.theta = 0; player.vtheta=0; player.tip = Math.max(8, 10*unit);
-
-    walls = [];
-    spawnCd = 0;
-    score = 0; chads = 0; t=0;
-
-    updateHUD(); draw();
+    score = 0; earned = 0;
+    document.getElementById('vortexScore').textContent = '0';
+    document.getElementById('vortexEarned').textContent = '0';
+    arcs = [];
+    spawnT = 0;
+    player.ang = 0;
   }
 
-  function updateHUD(){
-    scoreEl.textContent = Math.floor(score);
-    earnEl.textContent  = Math.floor(chads);
+  // ---------- collision ----------
+  function hitArc(arc){
+    // convert to absolute units
+    const rMin = (arc.radN - arc.thickN*0.5) * R;
+    const rMax = (arc.radN + arc.thickN*0.5) * R;
+
+    const pr = player.rad * R;          // player orbit radius (absolute)
+    // small radial forgiveness:
+    if (pr < rMin - 3 || pr > rMax + 3) return false;
+
+    // angle in range?
+    const pa = wrapPI(player.ang);
+    const a0 = wrapPI(arc.a0);
+    const a1 = wrapPI(arc.a0 + arc.len);
+    let inside=false;
+    if (a0 <= a1)  inside = (pa >= a0 && pa <= a1);
+    else           inside = (pa >= a0 || pa <= a1);
+
+    return inside;
   }
 
-  // Input: keyboard + pointer halves (touch/mouse)
-  const input = {left:false,right:false,ptr:false};
-  function onKey(e,down){
-    if(['ArrowLeft','a','A','ArrowRight','d','D'].includes(e.key)){
-      e.preventDefault();
-      if(e.key==='ArrowLeft'||e.key==='a'||e.key==='A') input.left=down;
-      if(e.key==='ArrowRight'||e.key==='d'||e.key==='D') input.right=down;
-    }
-  }
-  window.addEventListener('keydown', e=>onKey(e,true),  {passive:false});
-  window.addEventListener('keyup',   e=>onKey(e,false), {passive:false});
-
-  function setPtr(dir){ input.ptr = dir!==0; input.left = dir<0; input.right = dir>0; }
-  cvs.addEventListener('pointerdown', e=>{
-    try{ cvs.setPointerCapture(e.pointerId); }catch{}
-    const mid = cvs.getBoundingClientRect().left + cvs.getBoundingClientRect().width/2;
-    setPtr(e.clientX < mid ? -1 : 1);
-  }, {passive:true});
-  cvs.addEventListener('pointermove', e=>{
-    if(!input.ptr) return;
-    const mid = cvs.getBoundingClientRect().left + cvs.getBoundingClientRect().width/2;
-    setPtr(e.clientX < mid ? -1 : 1);
-  }, {passive:true});
-  function endPtr(e){ input.ptr=false; input.left=false; input.right=false; try{ cvs.releasePointerCapture(e.pointerId); }catch{} }
-  cvs.addEventListener('pointerup', endPtr, {passive:true});
-  cvs.addEventListener('pointercancel', endPtr, {passive:true});
-
-  // Update simulation
-  function step(dt){
-    t+=dt;
-
-    // spawn new waves periodically
-    spawnCd -= dt;
-    if (spawnCd <= 0){
-      spawnWave();
-      spawnCd = 1.15 + Math.random()*0.6; // seconds between waves
+  // ---------- update/draw ----------
+  function update(dt){
+    // input rotation
+    const dir = (input.left? -1:0) + (input.right? +1:0);
+    if (dir !== 0){
+      player.ang += dir * player.rotSpeed * dt;
+      player.ang = wrapPI(player.ang);
     }
 
-    // player rotation
-    const want = (input.left?-1:0) + (input.right?1:0);
-    player.vtheta = want * player.speed;
-    player.theta = norm(player.theta + player.vtheta*dt);
+    // spawn
+    spawnT -= dt;
+    if (spawnT <= 0){
+      spawnArc();
+      spawnT = spawnEvery + Math.random()*0.35;
+    }
 
-    // move walls & check collision
-    for(let i=walls.length-1;i>=0;i--){
-      const w = walls[i];
-      w.a = norm(w.a + w.dir * w.w * dt);
-      w.r += w.vr * dt;
-
-      // collision at player lane
-      if (hitWall(w)){
-        gameOver();
-        return; // leave the frame; draw() will run inside gameOver
+    // move arcs + check collision
+    for (let i=arcs.length-1; i>=0; i--){
+      const a = arcs[i];
+      a.a0 += a.angVel * dt;
+      a.radN += a.vr * dt;                       // inward
+      if (a.radN + a.thickN*0.5 < 0.18){         // passed center -> remove
+        arcs.splice(i,1);
+        continue;
       }
-
-      // remove once passed center
-      if (w.r < player.r - 80*unit) walls.splice(i,1);
+      if (hitArc(a)){ gameOver(); return; }
     }
 
-    // scoring
-    score += dt * 60 * 0.7;               // ~42 pts/sec
-    chads  = Math.floor(score / 28) * 2;  // +2 chads per 28 score (tweak)
-    updateHUD();
+    score += dt*60;                               // roughly per-frame scoring
+    document.getElementById('vortexScore').textContent = Math.floor(score);
+
+    // small drip of chads as time reward (feel free to adjust)
+    // +1 chad each ~8 seconds (easy mode)
+    const newEarned = Math.floor(score/8);
+    if (newEarned > earned){
+      earned = newEarned;
+      document.getElementById('vortexEarned').textContent = earned;
+    }
   }
 
-  // Render
   function draw(){
-    // background
+    // prepare canvas
+    ctx.setTransform(1,0,0,1,0,0);
     ctx.clearRect(0,0,W,H);
-    const bg = ctx.createRadialGradient(cx,cy, Math.min(W,H)*0.05, cx,cy, Math.min(W,H)*0.7);
-    bg.addColorStop(0,'#0b1223');
-    bg.addColorStop(1,'#06090f');
-    ctx.fillStyle = bg; ctx.fillRect(0,0,W,H);
 
-    ctx.save(); ctx.translate(cx,cy);
+    // background
+    const g = ctx.createRadialGradient(cx, cy, 10, cx, cy, R*1.6);
+    g.addColorStop(0, '#0b1223'); g.addColorStop(1, '#070a0f');
+    ctx.fillStyle = g; ctx.fillRect(0,0,W,H);
 
-    // walls
+    // world transform
+    ctx.translate(cx, cy);
+
+    // arcs
     ctx.strokeStyle = '#4aa3ff';
-    ctx.lineCap='round';
-    for(const w of walls){
-      ctx.lineWidth = w.thick;
+    ctx.lineCap = 'round';
+    arcs.forEach(a=>{
+      const r = a.radN * R;
       ctx.beginPath();
-      ctx.arc(0,0, w.r, w.a - w.span*0.5, w.a + w.span*0.5, false);
+      ctx.lineWidth = Math.max(1, a.thickN * R);     // **thin** lines
+      ctx.arc(0,0, r, a.a0, a.a0 + a.len, false);
       ctx.stroke();
-    }
+    });
 
-    // player triangle
-    const pr = player.r, ang = player.theta;
-    const px = Math.cos(ang)*pr, py = Math.sin(ang)*pr;
-    ctx.fillStyle = '#ffc64b';
+    // player (big triangle)
+    const pr = player.rad * R;
+    const tip = player.size * R;                      // **3× bigger**
+    const ang = player.ang;
+
+    const tx = Math.cos(ang) * pr,  ty = Math.sin(ang) * pr;
+    const leftAng = ang + Math.PI*0.69;
+    const rightAng = ang - Math.PI*0.69;
+
+    ctx.fillStyle = '#ffc84b';
     ctx.beginPath();
-    ctx.moveTo(px, py);
-    const backAng = ang + Math.PI*0.82;
-    const b1x = px + Math.cos(backAng - 0.25)*player.tip;
-    const b1y = py + Math.sin(backAng - 0.25)*player.tip;
-    const b2x = px + Math.cos(backAng + 0.25)*player.tip;
-    const b2y = py + Math.sin(backAng + 0.25)*player.tip;
-    ctx.lineTo(b1x,b1y); ctx.lineTo(b2x,b2y); ctx.closePath(); ctx.fill();
-
-    ctx.restore();
+    ctx.moveTo(tx + Math.cos(ang)*tip,     ty + Math.sin(ang)*tip);
+    ctx.lineTo(tx + Math.cos(leftAng)*tip*0.55,  ty + Math.sin(leftAng)*tip*0.55);
+    ctx.lineTo(tx + Math.cos(rightAng)*tip*0.55, ty + Math.sin(rightAng)*tip*0.55);
+    ctx.closePath();
+    ctx.fill();
   }
 
-  // Loop
+  // ---------- loop control ----------
   function frame(ts){
-    if(!running){ raf=null; return; }
-    const prev = lastTs || ts; lastTs = ts;
-    const dt = Math.min(0.033, Math.max(0, (ts - prev)/1000));
-    if(!paused){ step(dt); draw(); }
+    if (!running) return;
+    if (!lastTs) lastTs = ts;
+    const dt = Math.min(0.033, (ts - lastTs)/1000); // cap large jumps
+    lastTs = ts;
+
+    if (!paused){
+      update(dt);
+      draw();
+    }
     raf = requestAnimationFrame(frame);
   }
 
-  // Control handlers
   function start(){
+    stop(false);
+    fitCanvas();
     reset();
-    running=true; paused=false;
-    lastTs = performance.now();
-    pauseBtn.textContent='Pause';
-    if(!raf) raf = requestAnimationFrame(frame);
+    paused = false;
+    running = true;
+    lastTs = 0;
+    document.getElementById('vortexPause').textContent = 'Pause';
+    raf = requestAnimationFrame(frame);
   }
-  function togglePause(){
-    if(!running) return;
-    paused = !paused;
-    pauseBtn.textContent = paused ? 'Resume':'Pause';
+
+  function stop(close=true){
+    running = false;
+    paused = false;
+    if (raf){ cancelAnimationFrame(raf); raf = null; }
+    if (close){ closeOverlay('vortexModal'); }
   }
+
+  function gameOver(){
+    // stop the loop but keep modal open so Start works again
+    running = false;
+    if (raf){ cancelAnimationFrame(raf); raf = null; }
+    fancyAlert('You hit a wall — press Start to try again.');
+  }
+
   function quit(){
-    if(!running) return;
-    running=false;
-    if(raf){ cancelAnimationFrame(raf); raf=null; }
     // award and close
-    const pay = Math.max(0, Math.floor(chads));
-    if (pay>0 && typeof state!=='undefined'){
-      state.chads = (state.chads ?? 0n) + BigInt(pay);
-      saveStateLocal?.(state); refreshUI?.();
-      showToast?.(`<span class="accent">+${pay}</span> chads added to balance.`);
+    const gained = earned|0;
+    if (gained>0){
+      state.chads += BigInt(gained);
+      saveStateLocal(state);
+      refreshUI();
+      showToast(`<span class="accent">+${gained}</span> chads added to balance.`);
     }
-    // leave the last frame on screen, then close the modal
-    if (typeof closeOverlay==='function') closeOverlay('vortexModal');
+    stop(true);
   }
 
-  startBtn.onclick = start;
-  pauseBtn.onclick = togglePause;
-  quitBtn.onclick  = quit;
+  // ---------- resize / inputs ----------
+  const ro = new ResizeObserver(()=>{ if (document.getElementById('vortexModal').classList.contains('show')) fitCanvas(); });
+  ro.observe(cvs.parentElement || cvs);
 
-  // Resize: keep crisp when device rotates / sheet resizes
-  const ro = new ResizeObserver(()=>{ if(!running) reset(); else { fitCanvas(); W=cvs.width/(window.devicePixelRatio||1); H=cvs.height/(window.devicePixelRatio||1); cx=W/2; cy=H/2; }});
-  ro.observe(cvs);
+  // keyboard
+  function key(e,down){
+    if (e.key==='ArrowLeft' || e.key==='a' || e.key==='A'){ e.preventDefault(); input.left = down; }
+    if (e.key==='ArrowRight'|| e.key==='d' || e.key==='D'){ e.preventDefault(); input.right = down; }
+  }
+  window.addEventListener('keydown', e=>key(e,true), {passive:false});
+  window.addEventListener('keyup',   e=>key(e,false),{passive:false});
 
-  // optional: helper for your Play menu tile
-  window.openVortex = ()=>{ closeOverlay?.('playOverlay'); openOverlay?.('vortexModal'); /* wait for user to press Start */ };
+  // touch / pointer (left half = left, right half = right)
+  function onPtrDown(e){
+    try{ cvs.setPointerCapture(e.pointerId); }catch{}
+    const mid = (cvs.getBoundingClientRect().left + cvs.getBoundingClientRect().right)/2;
+    input.left  = (e.clientX < mid);
+    input.right = !input.left;
+  }
+  function onPtrUp(){ input.left=false; input.right=false; }
+  cvs.addEventListener('pointerdown', onPtrDown, {passive:true});
+  cvs.addEventListener('pointerup', onPtrUp, {passive:true});
+  cvs.addEventListener('pointercancel', onPtrUp, {passive:true});
+  cvs.addEventListener('lostpointercapture', onPtrUp, {passive:true});
+
+  // ---------- wire buttons ----------
+  document.getElementById('vortexStart').onclick = start;
+  document.getElementById('vortexPause').onclick = ()=>{
+    if (!running) return;
+    paused = !paused;
+    document.getElementById('vortexPause').textContent = paused ? 'Resume' : 'Pause';
+  };
+  document.getElementById('vortexQuit').onclick = quit;
+
+  // open function used by your “Play” menu
+  window.openVortex = ()=>{
+    closeOverlay('playOverlay');
+    openOverlay('vortexModal');
+    // draw idle state
+    fitCanvas(); reset(); draw();
+  };
 })();
 
 
